// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-field can mount "read only" filled list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" disabled="disabled" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount collapsed list field 1`] = `
<div id="app">
    <div class="SharpList SharpList--sort">
        <!---->
        <div>
            <div>
                <div class="SharpList__item SharpList__item--collapsed">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div><span> Antoine </span></div>
                            <div class="SharpList__overlay-handle"></div>
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount empty "read only" list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div></div>
            <!---->
        </div> <em class="SharpList__empty-alert"></em></div>
</div>
`;

exports[`list-field can mount empty list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div></div><button type="button" class="SharpButton SharpButton--secondary SharpList__add-button">Ajouter un élément</button></div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount filled list field 1`] = `
<div id="app">
    <div class="SharpList"><button type="button" class="SharpButton SharpButton--ghost SharpList__sort-button"><svg width="24" height="22" viewBox="0 0 24 22" fill-rule="evenodd" class="SharpButton__icon"><path d="M20 14V0h-4v14h-4l6 8 6-8zM4 8v14h4V8h4L6 0 0 8z"></path></svg></button>
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <div class="SharpList__new-item-zone"><button class="SharpButton SharpButton--secondary SharpButton--sm"></button></div>
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div><button type="button" class="SharpButton SharpButton--secondary SharpList__add-button">Ajouter un élément</button></div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount non addable, non removable, non sortable list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount with full list 1`] = `
<div id="app">
    <div class="SharpList"><button type="button" class="SharpButton SharpButton--ghost SharpList__sort-button"><svg width="24" height="22" viewBox="0 0 24 22" fill-rule="evenodd" class="SharpButton__icon"><path d="M20 14V0h-4v14h-4l6 8 6-8zM4 8v14h4V8h4L6 0 0 8z"></path></svg></button>
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div> <button class="SharpButton SharpButton--danger SharpButton--sm"></button>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;
